@@ -48,3 +48,4 @@ KPresenter 1.2beta1 -> 1.2 beta 2
 - Add option to "Snap to grid"
 - Add support for text object margins
 - Improve font style
+- New transition effects: Strips
